# TargetDetector

./: CMakeLists.txt  LibraryConfig.cmake.in  README
doc/: doc.tag
include/: blob.h  codeconversion.h  target.h  targetdetector.h
samples/: CMakeLists.txt  sample-grid.cpp  sample-targets.cpp
src/: targetdetector.cpp
unitTesting/: CMakeLists.txt  autothresholdtest.cpp  findtargetsgrid.cpp  oneblobtest.cpp  oneblobtestaffine.cpp  testtypes.cpp  threeblobstest.cpp  threeblobstestaffine.cpp  tworingstest.cpp  tworingstestaffine.cpp
